manifest/frontend-companion/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-companion
  name: frontend-companion
  namespace: expenses-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-companion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: frontend-companion
    spec:
      volumes:
        - configMap:
            name: frontend-companion-nginx-config
          name: nginx-config
        - name: nginx-cache
          emptyDir: { }
        - name: nginx-run
          emptyDir: { }
      containers:
        - image: ghcr.io/and-mora/expenses-monitor:v1.0.2-expense-companion
          name: frontend-companion
          volumeMounts:
            - mountPath: "/etc/nginx/conf.d"
              name: nginx-config
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: nginx-run
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "500Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
      automountServiceAccountToken: false

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-companion
  name: frontend-companion
  namespace: expenses-monitor
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend-companion
  sessionAffinity: None
  type: ClusterIP
